[package]
name = "dotfiles-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
futures = "0.3.31"
log = "0.4.25"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
structopt = "0.3.26"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
xdg = "2.5.2"
blueprint = { git = "https://git.nubo.sh/hulthe/blueprint.git", rev = "92df583316" }
async-recursion = "1.1.1"
